==> ChibiOS/ChibiOS/os/hal/ports/AVR/XMEGA/LLD/USARTv1/hal_serial_lld.c <==
#include "hal.h"

static void usart_init(SerialDriver *sdp, const SerialConfig *config) {

  USART_t *u = sdp->usart;

  usart_start(sdp, config);
  u->CTRLA = (u->CTRLA & ~USART_RXCINTLVL_gm) | USART_RXCINTLVL_LO_gc;
  u->CTRLA = (u->CTRLA & ~USART_TXCINTLVL_gm) | USART_TXCINTLVL_LO_gc;
  u->CTRLA = (u->CTRLA & ~USART_DREINTLVL_gm) | USART_DREINTLVL_LO_gc;
  PMIC.CTRL |= PMIC_LOLVLEX_bm;
  sei();
  u->CTRLB |= (USART_RXEN_bm);
  u->CTRLB |= (USART_TXEN_bm);
}

static void usart_deinit(USART_t *u) {

  u->CTRLB &= ~(USART_RXEN_bm);
  u->CTRLB &= ~(USART_TXEN_bm);
}

static void set_error(SerialDriver *sdp, uint8_t sr) {

  eventflags_t sts = 0;

  if (sr & USART_BUFOVF_bm)
    sts |= SD_OVERRUN_ERROR;
  if (sr & USART_PERR_bm)
    sts |= SD_PARITY_ERROR;
  if (sr & USART_FERR_bm)
    sts |= SD_FRAMING_ERROR;

  chnAddFlagsI(sdp, sts);
}

static void notify1(io_queue_t *qp) {

  (void)qp;
  USARTC0.CTRLA &= ~USART_DREINTLVL_gm;
  USARTC0.CTRLA |= USART_DREINTLVL_MED_gc;
}

static void notify2(io_queue_t *qp) {

  (void)qp;
  USARTC1.CTRLA &= ~USART_DREINTLVL_gm;
  USARTC1.CTRLA |= USART_DREINTLVL_MED_gc;
}

static void notify3(io_queue_t *qp) {

  (void)qp;
  USARTD0.CTRLA &= ~USART_DREINTLVL_gm;
  USARTD0.CTRLA |= USART_DREINTLVL_MED_gc;
}

static void notify4(io_queue_t *qp) {

  (void)qp;
  USARTD1.CTRLA &= ~USART_DREINTLVL_gm;
  USARTD1.CTRLA |= USART_DREINTLVL_MED_gc;
}

static void notify5(io_queue_t *qp) {

  (void)qp;
  USARTE0.CTRLA &= ~USART_DREINTLVL_gm;
  USARTE0.CTRLA |= USART_DREINTLVL_MED_gc;
}

void sd_lld_init(void) {

#if AVR_SERIAL_USE_USART1 == TRUE
  sdObjectInit(&SD1, NULL, notify1);
  SD1.usart = &USARTC0;
#endif
#if AVR_SERIAL_USE_USART2 == TRUE
  sdObjectInit(&SD2, NULL, notify2);
  SD2.usart = &USARTC1;
#endif
#if AVR_SERIAL_USE_USART3 == TRUE
  sdObjectInit(&SD3, NULL, notify3);
  SD3.usart = &USARTD0;
#endif
#if AVR_SERIAL_USE_USART4 == TRUE
  sdObjectInit(&SD4, NULL, notify4);
  SD4.usart = &USARTD1;
#endif
#if AVR_SERIAL_USE_USART5 == TRUE
  sdObjectInit(&SD5, NULL, notify5);
  SD5.usart = &USARTE0;
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {

  if (config == NULL) {
    config = &default_config;
  }

  if (sdp->state == SD_STOP) {
#if AVR_SERIAL_USE_USART1 == TRUE
    if (&SD1 == sdp) {

    }
#endif
#if AVR_SERIAL_USE_USART2 == TRUE
    if (&SD2 == sdp) {

    }
#endif
#if AVR_SERIAL_USE_USART3 == TRUE
    if (&SD3 == sdp) {

    }
#endif
#if AVR_SERIAL_USE_USART4 == TRUE
    if (&SD4 == sdp) {

    }
#endif
#if AVR_SERIAL_USE_USART5 == TRUE
    if (&SD5 == sdp) {

    }
#endif
  }
  /* Configures the peripheral. */
  usart_init(sdp, config);
}

void sd_lld_stop(SerialDriver *sdp) {

  usart_deinit(sdp->usart);
  if (sdp->state == SD_READY) {
#if AVR_SERIAL_USE_USART1 == TRUE
    if (&SD1 == sdp) {

    }
#endif
#if AVR_SERIAL_USE_USART2 == TRUE
    if (&SD2 == sdp) {

    }
#endif
#if AVR_SERIAL_USE_USART3 == TRUE
    if (&SD3 == sdp) {

    }
#endif
#if AVR_SERIAL_USE_USART4 == TRUE
    if (&SD4 == sdp) {

    }
#endif
#if AVR_SERIAL_USE_USART5 == TRUE
    if (&SD5 == sdp) {

    }
#endif
  }
}
